<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".screen.CartActivity">

    <include
        layout="@layout/activity_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        style="@style/subheader_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_label" />

    <TextView
        android:id="@+id/authorName"
        style="@style/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_label_hint" />

    <TextView
        android:id="@+id/textView5"
        style="@style/subheader_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_cart_label" />

    <TextView
        android:id="@+id/nameCart"
        style="@style/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_list_name"
        android:textColor="#120606" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/cartList"
                style="@style/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/list_cart"
                android:inputType="textMultiLine"
                android:lines="@integer/num_lines_cart" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="saveCart"
                android:text="@string/btn_save_cart" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>