<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddNewCart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.ShowCartActivity">

    <include
        layout="@layout/activity_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        style="@style/subheader_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirma_add_cart" />

    <TextView
        android:id="@+id/LastCart"
        style="@style/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/restList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_add_new_cart" />

            <Button
                android:id="@+id/ShowAllCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="showAllCarts"
                android:text="@string/btn_show_cart" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>